# fea_electro_static

./: .gitignore  README.md
doc/: README.md  methodology.tex  methodology2.tex
src/: CMakeLists.txt  electrostatic.cpp  electrostatics.h  main.cpp
